--- a/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/attaches/attaches.xhtml
@@ -15,7 +15,7 @@
                 <p:fileUpload id="file" 
                               disabled="#{_bean.isReadOnly()}"
                               allowTypes="#{applicationBean.ALLOW_FILE_TYPES}"
-                              sizeLimit="#{docBean.maxFileSize}"
+                              sizeLimit="#{sessionBean.maxFileSize}"
                               invalidFileMessage = "#{bundle.INVALID_FILE_TYPE}"
                               invalidSizeMessage = "#{bundle.INVALID_FILE_SIZE}"
                               fileLimitMessage   = "#{bundle.INVALID_FILE_COUNT}"
