--- a/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
@@ -75,7 +75,7 @@
                     <p:fileUpload value="#{fileUploadView.file}" auto="true" mode="advanced" styleClass="ui-grid-col-6"
                                   rendered="#{!processCardBean.isReadOnly()}" style="float:right;"
                                   allowTypes="#{applicationBean.ALLOW_FILE_TYPES}"
-                                  sizeLimit="#{docBean.maxFileSize}"
+                                  sizeLimit="#{sessionBean.maxFileSize}"
                                   invalidFileMessage = "#{bundle.INVALID_FILE_TYPE}"
                                   invalidSizeMessage = "#{bundle.INVALID_FILE_SIZE}"
                                   fileLimitMessage   = "#{bundle.INVALID_FILE_COUNT}"
