--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -27,7 +27,7 @@
                     <p:commandLink id="btnClose" type="button" title="#{bundle.Close}" immediate="true" styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
                                    rendered="#{_bean.getSourceBeanId() != null}"
                                    disabled="#{!_canClose}"
-                                   actionListener="#{_bean.onCancelItemSave()}" ajax="false" 
+                                   action="#{_bean.onCancelItemSave()}" ajax="false" 
                                    onclick="if (itemChange == 1) {onChangeItem();} sendFormSize('#{_bean.getFormName()}');">
                         <h:outputText styleClass="ui-icon ui-icon-closethick" />
                     </p:commandLink>
@@ -101,6 +101,7 @@
             <ui:insert name="form_scripts"/>
 
             <ui:include src="/view/common/confirm-dlg.xhtml"/>
+
             <p:remoteCommand name="formSize"     immediate="true" actionListener="#{sessionBean.onFormSize()}" />
             <p:remoteCommand name="onChangeItem" immediate="true" actionListener="#{_bean.onItemChange()}" oncomplete="return itemChange = 0;"/> 
         </h:form>
