--- a/escom-bpm-web/src/main/webapp/view/partners/partner-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-card.xhtml
@@ -2,7 +2,8 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-card.xhtml">
+                template="/view/templ/templ-card.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html">
     
     <ui:param name="_bean" value="#{partnersCardBean}"/>
 
@@ -43,17 +44,23 @@
                 <p:message for="type" display="tooltip"/>
 
                 <p:outputLabel value="#{bundle.FullName}:" />
-                <p:inputTextarea value="#{_bean.editedItem.fullName}" id="fullName"
-                                 disabled="#{_bean.isReadOnly()}"
-                                 onkeypress="checkEsc();"
-                                 rows="1" autoResize="true"
-                                 styleClass="ui-grid-col-12"                                      
-                                 onchange="return itemChange = 1;">
-                </p:inputTextarea>
-                <p:commandButton value="#{bundle.ToForm}" title="#{bundle.MakeName}"
-                                 update="fullName"
-                                 actionListener="#{partnersCardBean.makeFullName()}"/>
-
+                
+                <h:panelGroup styleClass="ui-grid-col-12">
+                    <div class="ui-inputgroup">
+                        <p:inputTextarea value="#{_bean.editedItem.fullName}" id="fullName"
+                                         disabled="#{_bean.isReadOnly()}"
+                                         onkeypress="checkEsc();"
+                                         rows="1" autoResize="true"
+                                         styleClass="ui-grid-col-12"                                      
+                                         onchange="return itemChange = 1;">
+                        </p:inputTextarea>
+                        <p:commandButton icon="ui-icon-script" title="#{bundle.MakeName}"
+                                         disabled="#{_bean.isReadOnly()}"
+                                         update="fullName"
+                                         actionListener="#{partnersCardBean.makeFullName()}"/>
+                    </div>
+                </h:panelGroup>
+                
                 <p:outputLabel value="#{bundle.EMail}:" />
                 <p:inputText id="email" value="#{_bean.editedItem.email}" 
                              onkeypress="checkEsc();"
