--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -1,24 +1,31 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
                 template="/view/templ/templ-frm.xhtml">
 
     <ui:define name="centerContent"> 
+        <p:importConstants type="com.maxfill.dictionary.DictRights"       var="DictRights" />
+        <p:importConstants type="com.maxfill.dictionary.DictEditMode"     var="DictEditMode" />
+        <p:importConstants type="com.maxfill.dictionary.DictModules"      var="DictModules" />
+        <p:importConstants type="com.maxfill.dictionary.DictDetailSource" var="DictSource" />
+            
         #{_bean.onAfterFormLoad()}
-        <h:form id="mainFRM" style="font-size: 90%; height: 100%;" styleClass="ui-grid-col-12" onkeypress="checkEsc();">
-            <p:hotkey bind="esc" id="hotskey" immediate="true" onstart="checkEsc();"/>            
-            <p:focus context="mainFRM:mainTabView" for="mainFRM:mainTabView:nameItem"/>
 
-            <script type="text/javascript">
-                $(function () {
-                    $(':input').bind('keydown', 'esc', function () {
-                        checkEsc();
-                        return false;
-                    });
-                });
-            </script>
+        <script>
+            var isFullPage = #{_bean.isFullPageMode()};
+            var formName = '#{_bean.getFormName()}';
+            window.onbeforeunload = function () {
+                if (!isFullPage) {
+                    sendFormSize(formName);
+                }
+                return null;
+            };
+        </script> 
+
+        <h:form id="mainFRM" style="font-size: 90%; height: 100%;" styleClass="ui-grid-col-12" > 
+            <p:focus context="mainFRM:mainTabView" for="mainFRM:mainTabView:nameItem"/>
             <p:panel rendered="#{_bean != null}" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;" >
                 <f:facet name="header">
                     #{_bean.getFormHeader()}
@@ -26,9 +33,8 @@
                 <f:facet name="actions">
                     <p:commandLink id="btnClose" type="button" title="#{bundle.Close}" immediate="true" styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
                                    rendered="#{_bean.getSourceBeanId() != null}"
-                                   disabled="#{!_canClose}"
                                    action="#{_bean.onCancelItemSave()}" ajax="false" 
-                                   onclick="if (itemChange == 1) {onChangeItem();} sendFormSize('#{_bean.getFormName()}');">
+                                   onclick="if (itemChange == 1) {onChangeItem();}">
                         <h:outputText styleClass="ui-icon ui-icon-closethick" />
                     </p:commandLink>
                 </f:facet>
@@ -55,7 +61,7 @@
                                              disabled="#{_bean.isReadOnly()}"
                                              icon="ui-icon-disk"
                                              actionListener="#{_bean.prepSaveItemAndClose()}" ajax="false"
-                                             onclick="sendFormSize('#{_bean.getFormName()}'); if (itemChange == 1) {onChangeItem();}">
+                                             onclick="if (itemChange == 1) {onChangeItem();}">
                                 <f:param name="isRequired" value="true"/>
                             </p:commandButton>
                             <span class="ui-separator">
@@ -75,7 +81,7 @@
                                             actionListener="#{sessionBean.onViewHelp()}"/>
                             </p:menuButton>
                         </f:facet>
-                    </p:toolbar>  
+                    </p:toolbar> 
 
                     <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-grid-col-12 without-spaces">
                         <p:autoUpdate />
@@ -90,21 +96,18 @@
                         <ui:include src="/view/common/dict-log.xhtml"/> 
                     </p:tabView>
 
-                    <p:importConstants type="com.maxfill.dictionary.DictRights"       var="DictRights" />
-                    <p:importConstants type="com.maxfill.dictionary.DictEditMode"     var="DictEditMode" />
-                    <p:importConstants type="com.maxfill.dictionary.DictModules"      var="DictModules" />
-                    <p:importConstants type="com.maxfill.dictionary.DictDetailSource" var="DictSource" />
-                    <ui:include src="/view/sys/noSaveDlg.xhtml" />
-                </p:panelGrid>   
+                </p:panelGrid>
             </p:panel>
 
             <ui:insert name="form_scripts"/>
 
             <ui:include src="/view/common/confirm-dlg.xhtml"/>
-
-            <p:remoteCommand name="formSize"     immediate="true" actionListener="#{sessionBean.onFormSize()}" />
+            <p:remoteCommand name="formSize" immediate="true" actionListener="#{sessionBean.onFormSize()}" /> 
             <p:remoteCommand name="onChangeItem" immediate="true" actionListener="#{_bean.onItemChange()}" oncomplete="return itemChange = 0;"/> 
         </h:form>
-    </ui:define>    
+
+        <ui:include src="/view/sys/noSaveDlg.xhtml" />
+        
+    </ui:define>
 
 </ui:composition>
