--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -5,7 +5,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirmDLG" width="470" height="195" modal="true" resizable="false">
-        <h:form style="font-size: 150%;">
+        <h:form style="font-size: 100%;">
             <p:panelGrid columns="1"  columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">                
                 <p:panelGrid columns="2" styleClass="ui-grid-col-12 without-spaces">
                     <p:graphicImage id="itemIcon" value="/resources/images/info.jpg"/>
@@ -16,7 +16,7 @@
                 <h:panelGroup>
                     <p:commandButton value="#{bundle.ExitNoSave}" style="float:right; "
                                      title="#{bundle.ExitWithoutSaving}"
-                                     action="#{_bean.onFinalCancelSave()}" ajax="false"
+                                     actionListener="#{_bean.onFinalCancelSave()}"
                                      onclick="PF('confirmDLG').hide();">
                     </p:commandButton>
                     <p:spacer width="5" />
